@@ -46,6 +46,7 @@ div.col { width: 50% }
 <a href="http://wikipedia.org/wiki/DataBar">DataBar (RSS)</a>,
 <a href="http://en.wikipedia.org/wiki/Code_93">Code 93</a>,
 <a href="http://wikipedia.org/wiki/Code_39">Code 39</a> and
+<a href="http://wikipedia.org/wiki/Codabar">Codabar</a> and
 <a href="http://wikipedia.org/wiki/Interleaved_2_of_5">Interleaved 2 of 5</a></p>
 <hr/>
 <p class="clear title">Hints for successful scanning</p>
